styles/style.css
/* Bold */
@font-face {
  font-family: "Lineto normal";
  src: url(./../assets/fonts/lineto-brown-pro-bold.woff) format("woff");
  font-style: normal;
}

@font-face {
  font-family: "Lineto bold";
  src: url(./../assets/fonts/lineto-brown-pro-regular.woff) format("woff");
  font-style: normal;
  font-weight: 500;
}
@font-face {
  font-family: "Lineto light";
  src: url(./../assets/fonts/lineto-brown-pro-light.woff) format("woff");
  font-style: normal;
  font-weight: 500;
}

body {
  font-family: "Lineto bold";
  margin: 0;
}

body > * {
  padding: 0 5vw;
  box-sizing: border-box;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-family: "Lineto bold";
}
.header > * {
  margin: 10px 0;
}

.header button {
  background-color: transparent;
  border: 0;
  margin-left: 10px;
}

.header .first_part {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.logitechg_logo_div {
  border-right: 1px solid rgb(100, 96, 96);
  margin-top:10px;
}

.logitechg_logo_div img {
  padding-right: 10px;
}

.header button {
  position: relative;
  color: #676a6c;
  width: 130px;
}

.header button::after {
  content: "";
  background-image: url(./../assets/svg/down_arrow.svg);
  background-size: 100% 100%;
  display: inline-block;
  height: 25px;
  width: 25px;
  position: relative;
  top: 5px;
}

.first_div {
  color: #ffffff;
  background-image: url(./../assets/jpg/combo-touch-ipad-air-12.9-inch-hpb-desktop1.jpg);
  background-repeat: no-repeat;
  background-size: cover;
}

.first_div .inner_top_div {
  padding-top: 30px;
  padding-bottom: 10px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.first_div .inner_top_div .search_div button {
  background-color: rgba(255, 255, 255, 0.35);
  color: #ffffff;
  border: 0;
  padding: 5px 15px;
  border-radius: 30px;
}

.first_div .inner_top_div .search_div span {
  padding-right: 40px;
}

.first_div .inner_top_div button {
  padding: 15px;
}

.first_div .inner_top_div .search_div img {
  height: 20px;
  vertical-align: middle;
}
.first_div .inner_top_div img {
  height: 30px;
}

.first_div .inner_content_div {
  color: #ffffff;
  font-size: 30px;
}

.first_div .inner_content_div {
  font-family: "Lineto bold";
}

.first_div .inner_content_div h3{
  font-size: 50px;
}

.first_div nav {
  display: flex;
  gap: 10px;
}

nav a {
  padding: 10px;
  border-radius: 20px;
  color: #ffffff;
  text-decoration: none;
}

nav a:hover {
  background-color: #ffffff;
  color: black;
}

.first_div .inner_content_div {
  width: 330px;
}

.first_div .inner_content_div > * {
  margin: 10px 0;
}

.first_div .inner_content_div p {
  font-family: "Lineto light";
  font-size: 25px;
}

.first_div .inner_content_div button {
  font-family: brown, Helvetica, sans-serif;
  font-size: 14px;
  font-weight: bold;
  color: #ffffff;
  padding: 18px 36px;
  background-color: #2f3132;
  border: 2px solid #2f3132;
  margin-bottom: 50px;
}

.first_div .inner_content_div button:hover {
  color: #2f3132;
  background-color: transparent;
}

.second_div{
  background-color: #ffffff;
  overflow-X: scroll;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 20px;
}
.second_div .content_div{
  margin-top: 80px;
}

.second_div .content_div p{
  font-family: "Lineto light";
}

.second_div .content_div img{
  width: 100%;
  height: auto;
  object-fit: cover;
}

.second_div .content_div h5{
  position: relative;
}

.second_div .content_div h5::after{
  content: "";
  background-image: url(./../assets/svg/right-arrow-svgrepo-com.svg);
  background-size: 100% 100%;
  display: inline-block;
  height: 14px;
  width: 14px;
  padding-right: 20px;
  position: relative;
  top: 2px;
}

.fourth_div {
  background-image: url(./../assets/png/pcr-plastic-desktop.png);
  background-repeat: no-repeat;
  background-position: center;
  height: 83vh;
}

.chat_help_div img {
  color: #2f3132;
  border: 0;
  background-color: #252a2c;
  border-radius: 100%;
  position: fixed;
  height: 64px;
  right: 20px;
  bottom: 30px;
}

.footer {
  padding: 0 140px;
  padding-top: 10px;
  color: #ffffff;
  background-color: #252a2c;
  font-size: 15px;
}

.footer .list_div {
  display: flex;
  gap: 100px;
}

.footer ul li {
  color: #c3c6c8;
  list-style: none;
  padding: 10px 0;
  font-weight: normal;
}

.footer ul li:hover {
  text-decoration: underline;
}

.footer h4 {
  padding-top: 40px;
}

.footer .social_div {
  border-top: 1px solid #676a6c;
  margin: 0 25px;
  display: flex;
  justify-content: space-between;
  padding-top: 30px;
}

.footer .social_div .mail_div input[type="text"] {
  padding: 10px 20px;
  width: 340px;
  height: 25px;
  background-color: #ffffff;
  border: 0;
}

.footer .social_div .mail_div span {
  font-family: "Lineto bold";
  text-decoration: underline;
}

.footer .social_div .mail_div .mail_checkbox_div {
  display: flex;
  gap: 10px;
}

.footer .social_div .mail_div input[type="checkbox"] {
  width: 18px;
  /* border: 10px solid red; */
  border-color: red;
  border-width: 2px;
}

.footer .social_div .social_icons {
  display: inline-block;
  display: flex;
  height: 25px;
  gap: 25px;
}

.footer .copyright_div {
  color: #c3c6c8;
  margin: 0 30px;
  display: flex;
  justify-content: space-between;
}

.footer .copyright_div > div {
  display: flex;
}

.footer .copyright_div ul {
  padding-right: 0;
  padding: 0;
}

.footer .copyright_div ul li {
  display: inline;
  margin-left: 15px;
  padding: 1px 10px;
}

.footer .copyright_div ul li:not(:first-child){
  border-left: 1px solid #676a6c;
}

.footer .copyright_div span {
  position: relative;
  margin: 15px 0;
}
.input_text_div {
  display: flex;
  background-color: #dcfd00;
}

.input_text_div img {
  padding: 0 20px;
  height: auto;
}

.india_div span{
  position: relative;
}

.india_div span::before {
  content: url(./../assets/svg/globe.svg);
  position: absolute;
  width: 16px;
  left: -20px;
  top: 50;
  float: right;
}

